[gd_scene load_steps=3 format=3 uid="uid://dfet1cgypfom2"]

[ext_resource type="Script" uid="uid://0gjtonfqk61y" path="res://addons/nodetunnel/new_demo/node_tunnel_demo.gd" id="1_sa5f3"]
[ext_resource type="PackedScene" uid="uid://bucigqlq6k64b" path="res://addons/nodetunnel/new_demo/objects/node_tunnel_wall.tscn" id="1_xddpx"]

[node name="NewNodeTunnelDemo" type="Node"]
script = ExtResource("1_sa5f3")

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("1_xddpx")]

[node name="Wall2" parent="Walls" instance=ExtResource("1_xddpx")]
position = Vector2(668, 85)

[node name="Wall3" parent="Walls" instance=ExtResource("1_xddpx")]
position = Vector2(827.828, 263.748)
rotation = 1.5708

[node name="Wall4" parent="Walls" instance=ExtResource("1_xddpx")]
position = Vector2(231.425, 302.296)
rotation = 1.5708

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -50.0
offset_right = -53.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectionControls" type="VBoxContainer" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -100.0
offset_right = 80.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyNameInput" type="LineEdit" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Lobby Name"

[node name="Host" type="Button" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="HSeparator" type="HSeparator" parent="UI/Control/ConnectionControls"]
layout_mode = 2

[node name="BrowseLobbies" type="Button" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse Lobbies"

[node name="HSeparator2" type="HSeparator" parent="UI/Control/ConnectionControls"]
layout_mode = 2

[node name="HostID" type="LineEdit" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Host ID"

[node name="Join" type="Button" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="IDLabel" type="Label" parent="UI/Control/ConnectionControls"]
unique_name_in_owner = true
layout_mode = 2
text = "Online ID: ABCD1234"

[node name="LeaveRoom" type="Button" parent="UI/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Leave Room"

[node name="LobbyListContainer" type="Control" parent="UI/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/LobbyListContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="UI/Control/LobbyListContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/LobbyListContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/LobbyListContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Title" type="Label" parent="UI/Control/LobbyListContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Available Lobbies"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UI/Control/LobbyListContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="LobbyListPlaceholder" type="Control" parent="UI/Control/LobbyListContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")
spawn_limit = 40

[node name="Level" type="TileMapLayer" parent="."]

[node name="Marker2D" type="Marker2D" parent="Level"]
position = Vector2(346, 159)

[node name="Marker2D2" type="Marker2D" parent="Level"]
position = Vector2(338, 399)

[node name="Marker2D3" type="Marker2D" parent="Level"]
position = Vector2(716, 165)

[node name="Marker2D4" type="Marker2D" parent="Level"]
position = Vector2(714, 414)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "P1"

[node name="Label_Score1" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "P2"

[node name="Label_Score2" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
text = "0"

[node name="Label5" type="Label" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "P3"

[node name="Label_Score3" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
text = "0"

[node name="Label7" type="Label" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "P4"

[node name="Label_Score4" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
text = "0"

[connection signal="pressed" from="UI/Control/ConnectionControls/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Control/ConnectionControls/BrowseLobbies" to="." method="_on_browse_lobbies_pressed"]
[connection signal="pressed" from="UI/Control/ConnectionControls/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="UI/Control/LeaveRoom" to="." method="_on_leave_room_pressed"]
[connection signal="pressed" from="UI/Control/LobbyListContainer/Panel/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
